--- a/.github/wokflows/deploy.yml
+++ b/.github/wokflows/deploy.yml
@@ -1,38 +1,50 @@
 name: Deploy to Production
-
 on:
   push:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
+      
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-
+      
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-
-      - name: Build and push Docker image
+      
+      - name: Build Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: false  # Cambiar a true cuando tengas configurado Docker Hub
+          push: false
+          load: true
           tags: iris-mlops:latest
-
-      - name: Deploy to server
-        run: |
-          echo "Deployment would happen here"
-          # En un entorno real, aquí conectarías con tu servidor y desplegarías
-          # Por ejemplo:
-          # ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "cd /path/to/app && git pull && docker-compose up -d"
+      
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            cd ~
+            if [ ! -d "iris-mlops-project" ]; then
+              git clone https://github.com/JoseSanchez23/iris-mlops-project.git
+            else
+              cd iris-mlops-project
+              git pull
+            fi
+            cd ~/iris-mlops-project
+            docker-compose down
+            docker-compose up -d
